unpackaged/main/default/objects/bz_dp_drive_shift_id__x/bz_dp_drive_shift_id__x.object-meta.xml
<CustomObject>
    <externalDataSource>EDS</externalDataSource>
    <externalName>bz_dp_drive_shift_id</externalName>
    <label>bz_dp_drive_shift_id</label>
    <pluralLabel>bz_dp_drive_shift_id</pluralLabel>
</CustomObject>