unpackaged/main/default/objects/bz_dp_drive_shift_id__x/fields/Drive_Shift_GUID__c.field-meta.xml
<CustomField>
    <fullName>Drive_Shift_GUID__c</fullName>
    <description>Drive_Shift_GUID</description>
    <externalDeveloperName>Drive_Shift_GUID</externalDeveloperName>
    <label>Drive_Shift_GUID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>