unpackaged/main/default/objects/bz_dp_drive_shift_id__x/fields/dw_trans_ts__c.field-meta.xml
<CustomField>
    <fullName>dw_trans_ts__c</fullName>
    <description>dw_trans_ts</description>
    <externalDeveloperName>dw_trans_ts</externalDeveloperName>
    <label>dw_trans_ts</label>
    <type>DateTime</type>
</CustomField>