unpackaged/main/default/objects/bz_dp_drive_shift_id__x/fields/row_stat_cd__c.field-meta.xml
<CustomField>
    <fullName>row_stat_cd__c</fullName>
    <description>row_stat_cd</description>
    <externalDeveloperName>row_stat_cd</externalDeveloperName>
    <label>row_stat_cd</label>
    <length>1</length>
    <type>Text</type>
</CustomField>