unpackaged/main/default/objects/bz_dp_drive_shift_id__x/fields/Shift_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_End_Time__c</fullName>
    <description>Shift_End_Time</description>
    <externalDeveloperName>Shift_End_Time</externalDeveloperName>
    <label>Shift_End_Time</label>
    <type>DateTime</type>
</CustomField>